// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props Beats badge should not show 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              color="inherit"
              data-euiicon-type="arrowLeft"
            />
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Browse all integrations
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
      />
      <header
        class="euiPageHeader emotion-euiPageHeader"
      >
        <div
          class="euiPageHeaderContent emotion-euiPageHeaderContent"
        >
          <div
            class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
            >
              <h1
                class="euiTitle emotion-euiTitle-l"
              >
                Great tutorial
                 
                <span>
                  <span
                    class="euiBetaBadge emotion-euiBetaBadge-hollow-m-baseline"
                    title="Beta"
                  >
                    Beta
                  </span>
                </span>
              </h1>
              <div
                class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
              />
              <div
                class="euiText emotion-euiText-constrainedWidth-m"
              >
                <p>
                  <div
                    class="euiText euiMarkdownFormat emotion-euiText-m-euiTextColor-default-euiMarkdownFormat-m-default"
                  >
                    <p>
                      this is a great tutorial about...
                    </p>
                  </div>
                </p>
              </div>
            </div>
          </div>
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <div>
      <button
        class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            color="inherit"
            data-euiicon-type="arrowLeft"
          />
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            Browse all integrations
          </span>
        </span>
      </button>
    </div>
    <div
      class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
    />
    <header
      class="euiPageHeader emotion-euiPageHeader"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent"
      >
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
          >
            <h1
              class="euiTitle emotion-euiTitle-l"
            >
              Great tutorial
               
              <span>
                <span
                  class="euiBetaBadge emotion-euiBetaBadge-hollow-m-baseline"
                  title="Beta"
                >
                  Beta
                </span>
              </span>
            </h1>
            <div
              class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
            />
            <div
              class="euiText emotion-euiText-constrainedWidth-m"
            >
              <p>
                <div
                  class="euiText euiMarkdownFormat emotion-euiText-m-euiTextColor-default-euiMarkdownFormat-m-default"
                >
                  <p>
                    this is a great tutorial about...
                  </p>
                </div>
              </p>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`props Beats badge should show 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              color="inherit"
              data-euiicon-type="arrowLeft"
            />
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Browse all integrations
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
      />
      <header
        class="euiPageHeader emotion-euiPageHeader"
      >
        <div
          class="euiPageHeaderContent emotion-euiPageHeaderContent"
        >
          <div
            class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
            >
              <h1
                class="euiTitle emotion-euiTitle-l"
              >
                Great tutorial
                 
                <span>
                  <span
                    class="euiBetaBadge emotion-euiBetaBadge-hollow-m-baseline"
                    title="Beta"
                  >
                    Beta
                  </span>
                </span>
                 
                <span
                  class="euiBadge emotion-euiBadge-default"
                  title="Beats"
                >
                  <span
                    class="euiBadge__content emotion-euiBadge__content"
                  >
                    <span
                      class="euiBadge__text emotion-euiBadge__text"
                    >
                      Beats
                    </span>
                  </span>
                </span>
              </h1>
              <div
                class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
              />
              <div
                class="euiText emotion-euiText-constrainedWidth-m"
              >
                <p>
                  <div
                    class="euiText euiMarkdownFormat emotion-euiText-m-euiTextColor-default-euiMarkdownFormat-m-default"
                  >
                    <p>
                      this is a great tutorial about...
                    </p>
                  </div>
                </p>
              </div>
            </div>
          </div>
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <div>
      <button
        class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            color="inherit"
            data-euiicon-type="arrowLeft"
          />
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            Browse all integrations
          </span>
        </span>
      </button>
    </div>
    <div
      class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
    />
    <header
      class="euiPageHeader emotion-euiPageHeader"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent"
      >
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
          >
            <h1
              class="euiTitle emotion-euiTitle-l"
            >
              Great tutorial
               
              <span>
                <span
                  class="euiBetaBadge emotion-euiBetaBadge-hollow-m-baseline"
                  title="Beta"
                >
                  Beta
                </span>
              </span>
               
              <span
                class="euiBadge emotion-euiBadge-default"
                title="Beats"
              >
                <span
                  class="euiBadge__content emotion-euiBadge__content"
                >
                  <span
                    class="euiBadge__text emotion-euiBadge__text"
                  >
                    Beats
                  </span>
                </span>
              </span>
            </h1>
            <div
              class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
            />
            <div
              class="euiText emotion-euiText-constrainedWidth-m"
            >
              <p>
                <div
                  class="euiText euiMarkdownFormat emotion-euiText-m-euiTextColor-default-euiMarkdownFormat-m-default"
                >
                  <p>
                    this is a great tutorial about...
                  </p>
                </div>
              </p>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`props exportedFieldsUrl 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              color="inherit"
              data-euiicon-type="arrowLeft"
            />
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Browse all integrations
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
      />
      <header
        class="euiPageHeader emotion-euiPageHeader"
      >
        <div
          class="euiPageHeaderContent emotion-euiPageHeaderContent"
        >
          <div
            class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
            >
              <h1
                class="euiTitle emotion-euiTitle-l"
              >
                Great tutorial
              </h1>
              <div
                class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
              />
              <div
                class="euiText emotion-euiText-constrainedWidth-m"
              >
                <p>
                  <div
                    class="euiText euiMarkdownFormat emotion-euiText-m-euiTextColor-default-euiMarkdownFormat-m-default"
                  >
                    <p>
                      this is a great tutorial about...
                    </p>
                  </div>
                  <br />
                  <a
                    class="euiLink emotion-euiLink-primary"
                    href="exported_fields_url"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    View exported fields
                    <span
                      class="emotion-EuiExternalLinkIcon"
                      data-euiicon-type="popout"
                      role="presentation"
                    />
                    <span
                      class="emotion-euiScreenReaderOnly"
                    >
                      (external, opens in a new tab or window)
                    </span>
                  </a>
                </p>
              </div>
            </div>
          </div>
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <div>
      <button
        class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            color="inherit"
            data-euiicon-type="arrowLeft"
          />
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            Browse all integrations
          </span>
        </span>
      </button>
    </div>
    <div
      class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
    />
    <header
      class="euiPageHeader emotion-euiPageHeader"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent"
      >
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
          >
            <h1
              class="euiTitle emotion-euiTitle-l"
            >
              Great tutorial
            </h1>
            <div
              class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
            />
            <div
              class="euiText emotion-euiText-constrainedWidth-m"
            >
              <p>
                <div
                  class="euiText euiMarkdownFormat emotion-euiText-m-euiTextColor-default-euiMarkdownFormat-m-default"
                >
                  <p>
                    this is a great tutorial about...
                  </p>
                </div>
                <br />
                <a
                  class="euiLink emotion-euiLink-primary"
                  href="exported_fields_url"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  View exported fields
                  <span
                    class="emotion-EuiExternalLinkIcon"
                    data-euiicon-type="popout"
                    role="presentation"
                  />
                  <span
                    class="emotion-euiScreenReaderOnly"
                  >
                    (external, opens in a new tab or window)
                  </span>
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`props iconType 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              color="inherit"
              data-euiicon-type="arrowLeft"
            />
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Browse all integrations
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
      />
      <header
        class="euiPageHeader emotion-euiPageHeader"
      >
        <div
          class="euiPageHeaderContent emotion-euiPageHeaderContent"
        >
          <div
            class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
            >
              <h1
                class="euiTitle emotion-euiTitle-l"
              >
                <span
                  class="emotion-euiPageHeaderContent__titleIcon"
                  data-euiicon-type="logoElastic"
                />
                Great tutorial
              </h1>
              <div
                class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
              />
              <div
                class="euiText emotion-euiText-constrainedWidth-m"
              >
                <p>
                  <div
                    class="euiText euiMarkdownFormat emotion-euiText-m-euiTextColor-default-euiMarkdownFormat-m-default"
                  >
                    <p>
                      this is a great tutorial about...
                    </p>
                  </div>
                </p>
              </div>
            </div>
          </div>
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <div>
      <button
        class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            color="inherit"
            data-euiicon-type="arrowLeft"
          />
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            Browse all integrations
          </span>
        </span>
      </button>
    </div>
    <div
      class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
    />
    <header
      class="euiPageHeader emotion-euiPageHeader"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent"
      >
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
          >
            <h1
              class="euiTitle emotion-euiTitle-l"
            >
              <span
                class="emotion-euiPageHeaderContent__titleIcon"
                data-euiicon-type="logoElastic"
              />
              Great tutorial
            </h1>
            <div
              class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
            />
            <div
              class="euiText emotion-euiText-constrainedWidth-m"
            >
              <p>
                <div
                  class="euiText euiMarkdownFormat emotion-euiText-m-euiTextColor-default-euiMarkdownFormat-m-default"
                >
                  <p>
                    this is a great tutorial about...
                  </p>
                </div>
              </p>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`props isBeta 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              color="inherit"
              data-euiicon-type="arrowLeft"
            />
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Browse all integrations
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
      />
      <header
        class="euiPageHeader emotion-euiPageHeader"
      >
        <div
          class="euiPageHeaderContent emotion-euiPageHeaderContent"
        >
          <div
            class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
            >
              <h1
                class="euiTitle emotion-euiTitle-l"
              >
                Great tutorial
                 
                <span>
                  <span
                    class="euiBetaBadge emotion-euiBetaBadge-hollow-m-baseline"
                    title="Beta"
                  >
                    Beta
                  </span>
                </span>
              </h1>
              <div
                class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
              />
              <div
                class="euiText emotion-euiText-constrainedWidth-m"
              >
                <p>
                  <div
                    class="euiText euiMarkdownFormat emotion-euiText-m-euiTextColor-default-euiMarkdownFormat-m-default"
                  >
                    <p>
                      this is a great tutorial about...
                    </p>
                  </div>
                </p>
              </div>
            </div>
          </div>
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <div>
      <button
        class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            color="inherit"
            data-euiicon-type="arrowLeft"
          />
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            Browse all integrations
          </span>
        </span>
      </button>
    </div>
    <div
      class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
    />
    <header
      class="euiPageHeader emotion-euiPageHeader"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent"
      >
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
          >
            <h1
              class="euiTitle emotion-euiTitle-l"
            >
              Great tutorial
               
              <span>
                <span
                  class="euiBetaBadge emotion-euiBetaBadge-hollow-m-baseline"
                  title="Beta"
                >
                  Beta
                </span>
              </span>
            </h1>
            <div
              class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
            />
            <div
              class="euiText emotion-euiText-constrainedWidth-m"
            >
              <p>
                <div
                  class="euiText euiMarkdownFormat emotion-euiText-m-euiTextColor-default-euiMarkdownFormat-m-default"
                >
                  <p>
                    this is a great tutorial about...
                  </p>
                </div>
              </p>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`props previewUrl 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              color="inherit"
              data-euiicon-type="arrowLeft"
            />
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Browse all integrations
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
      />
      <header
        class="euiPageHeader emotion-euiPageHeader"
      >
        <div
          class="euiPageHeaderContent emotion-euiPageHeaderContent"
        >
          <div
            class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
            >
              <h1
                class="euiTitle emotion-euiTitle-l"
              >
                Great tutorial
              </h1>
              <div
                class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
              />
              <div
                class="euiText emotion-euiText-constrainedWidth-m"
              >
                <p>
                  <div
                    class="euiText euiMarkdownFormat emotion-euiText-m-euiTextColor-default-euiMarkdownFormat-m-default"
                  >
                    <p>
                      this is a great tutorial about...
                    </p>
                  </div>
                </p>
              </div>
            </div>
            <div
              class="euiFlexGroup emotion-euiFlexGroup-wrap-l-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
              >
                <figure
                  class="euiImageWrapper emotion-euiImageWrapper-allowFullScreen"
                >
                  <button
                    class="emotion-euiImageButton-shadowHover"
                    data-test-subj="activateFullScreenButton"
                    type="button"
                  >
                    <img
                      alt="screenshot of primary dashboard."
                      class="euiImage emotion-euiImage-l"
                      src="preview_image_url"
                    />
                    <div
                      class="emotion-euiImageButton__icon-openFullScreen"
                    >
                      <p
                        class="emotion-euiScreenReaderOnly"
                      >
                         — 
                        Click to open this image in fullscreen mode
                      </p>
                      <span
                        color="default"
                        data-euiicon-type="fullScreen"
                      />
                    </div>
                  </button>
                </figure>
              </div>
            </div>
          </div>
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <div>
      <button
        class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            color="inherit"
            data-euiicon-type="arrowLeft"
          />
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            Browse all integrations
          </span>
        </span>
      </button>
    </div>
    <div
      class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
    />
    <header
      class="euiPageHeader emotion-euiPageHeader"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent"
      >
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
          >
            <h1
              class="euiTitle emotion-euiTitle-l"
            >
              Great tutorial
            </h1>
            <div
              class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
            />
            <div
              class="euiText emotion-euiText-constrainedWidth-m"
            >
              <p>
                <div
                  class="euiText euiMarkdownFormat emotion-euiText-m-euiTextColor-default-euiMarkdownFormat-m-default"
                >
                  <p>
                    this is a great tutorial about...
                  </p>
                </div>
              </p>
            </div>
          </div>
          <div
            class="euiFlexGroup emotion-euiFlexGroup-wrap-l-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
            >
              <figure
                class="euiImageWrapper emotion-euiImageWrapper-allowFullScreen"
              >
                <button
                  class="emotion-euiImageButton-shadowHover"
                  data-test-subj="activateFullScreenButton"
                  type="button"
                >
                  <img
                    alt="screenshot of primary dashboard."
                    class="euiImage emotion-euiImage-l"
                    src="preview_image_url"
                  />
                  <div
                    class="emotion-euiImageButton__icon-openFullScreen"
                  >
                    <p
                      class="emotion-euiScreenReaderOnly"
                    >
                       — 
                      Click to open this image in fullscreen mode
                    </p>
                    <span
                      color="default"
                      data-euiicon-type="fullScreen"
                    />
                  </div>
                </button>
              </figure>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              color="inherit"
              data-euiicon-type="arrowLeft"
            />
            <span
              class="eui-textTruncate euiButtonEmpty__text"
            >
              Browse all integrations
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
      />
      <header
        class="euiPageHeader emotion-euiPageHeader"
      >
        <div
          class="euiPageHeaderContent emotion-euiPageHeaderContent"
        >
          <div
            class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
            >
              <h1
                class="euiTitle emotion-euiTitle-l"
              >
                Great tutorial
              </h1>
              <div
                class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
              />
              <div
                class="euiText emotion-euiText-constrainedWidth-m"
              >
                <p>
                  <div
                    class="euiText euiMarkdownFormat emotion-euiText-m-euiTextColor-default-euiMarkdownFormat-m-default"
                  >
                    <p>
                      this is a great tutorial about...
                    </p>
                  </div>
                </p>
              </div>
            </div>
          </div>
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <div>
      <button
        class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            color="inherit"
            data-euiicon-type="arrowLeft"
          />
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            Browse all integrations
          </span>
        </span>
      </button>
    </div>
    <div
      class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
    />
    <header
      class="euiPageHeader emotion-euiPageHeader"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent"
      >
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
          >
            <h1
              class="euiTitle emotion-euiTitle-l"
            >
              Great tutorial
            </h1>
            <div
              class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
            />
            <div
              class="euiText emotion-euiText-constrainedWidth-m"
            >
              <p>
                <div
                  class="euiText euiMarkdownFormat emotion-euiText-m-euiTextColor-default-euiMarkdownFormat-m-default"
                >
                  <p>
                    this is a great tutorial about...
                  </p>
                </div>
              </p>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
